--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <!-- Producto 2 -->
                 <div style="height: 450px; width: 300px;" class="col">
                     <div id="p1"class="card h-100" onclick="mostrarDetalles('producto2')">
-                        <img src="C:\Users\JUAN\Downloads\P R O G R A M A T I O N\Prueba\PAGINA\WhatsApp Image 2024-09-14 at 9.21.23 PM (1).jpeg"class="card-img-top" alt="Producto 2">
+                        <img src="WhatsApp Image 2024-09-14 at 9.21.23 PM (1).jpeg"class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title text-center">Audífonos Inalambricos</h5>
                         </div>
@@ -77,7 +77,7 @@
                 <!-- Producto 3 -->
                 <div style="height: 450px; width: 290px;" class="col">
                     <div id="p1"class="card h-100" onclick="mostrarDetalles('producto3')">
-                        <img src="C:\Users\JUAN\Downloads\P R O G R A M A T I O N\Prueba\PAGINA\WhatsApp Image 2024-09-14 at 9.21.23 PM (2).jpeg"class="card-img-top" alt="Producto 2">
+                        <img src="WhatsApp Image 2024-09-14 at 9.21.23 PM (2).jpeg"class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title text-center">Cascos TA82</h5>
                         </div>
@@ -86,7 +86,7 @@
                 <!-- Producto 4-->
                 <div style="height: 450px; width: 250px;" class="col">
                     <div id="p1"class="card h-100" onclick="mostrarDetalles('producto4')">
-                        <img src="C:\Users\JUAN\Downloads\P R O G R A M A T I O N\Prueba\PAGINA\WhatsApp Image 2024-09-14 at 9.21.23 PM (3).jpeg"class="card-img-top" alt="Producto 2">
+                        <img src="WhatsApp Image 2024-09-14 at 9.21.23 PM (3).jpeg"class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title text-center">Audífonos Inalambricos TWS</h5>
                         </div>
@@ -96,7 +96,7 @@
                 <!-- Producto 5 -->
                 <div style="height: 450px; width: 300px; margin-left: 300px; margin-bottom: 50px;" class="col">
                     <div id="p1" class="card h-100" onclick="mostrarDetalles('producto5')">
-                        <img src="C:\Users\JUAN\Downloads\P R O G R A M A T I O N\Prueba\PAGINA\WhatsApp Image 2024-09-14 at 9.21.23 PM.jpeg" class="card-img-top" alt="Producto 1">
+                        <img src="WhatsApp Image 2024-09-14 at 9.21.23 PM.jpeg" class="card-img-top" alt="Producto 1">
                         <div  class="card-body" >
                             <h5 class="card-title text-center">Audífonos Inalambricos Tipo Armadura</h5>
                         </div>
@@ -105,7 +105,7 @@
                 <!-- Producto 6 -->
                 <div style="height: 450px; width: 300px;" class="col">
                     <div id="p1"class="card h-100" onclick="mostrarDetalles('producto6')">
-                        <img src="C:\Users\JUAN\Downloads\P R O G R A M A T I O N\Prueba\PAGINA\WhatsApp Image 2024-09-14 at 9.21.22 PM.jpeg"class="card-img-top" alt="Producto 2">
+                        <img src="WhatsApp Image 2024-09-14 at 9.21.22 PM.jpeg"class="card-img-top" alt="Producto 2">
                         <div class="card-body">
                             <h5 class="card-title text-center">Lámpara Bluetooth</h5>
                         </div>
